--- a/APK_Calori/android/tfmobile/local.properties
+++ b/APK_Calori/android/tfmobile/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 17 20:39:02 EST 2018
-sdk.dir=/Users/zakled/Library/Android/sdk
+#Mon Feb 19 22:32:07 EST 2018
+sdk.dir=C\:\\Users\\samue\\AppData\\Local\\Android\\Sdk
